Change struct value from list to map
Signed-off-by: Heng Qian <qianheng@amazon.com>