@@ -14,9 +14,10 @@ import static org.opensearch.sql.util.MatcherUtils.verifyDataRows;
 import static org.opensearch.sql.util.MatcherUtils.verifySchema;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import org.json.JSONObject;
 import org.junit.Test;
 import org.opensearch.sql.ppl.PPLIntegTestCase;
@@ -49,6 +50,16 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     loadIndex(Index.GRAPH_AIRPORTS);
   }
 
+  /** Null-safe map helper since {@code Map.of()} rejects null values. */
+  @SuppressWarnings("unchecked")
+  private static Map<String, Object> mapOf(Object... keysAndValues) {
+    LinkedHashMap<String, Object> map = new LinkedHashMap<>();
+    for (int i = 0; i < keysAndValues.length; i += 2) {
+      map.put((String) keysAndValues[i], keysAndValues[i + 1]);
+    }
+    return map;
+  }
+
   // ==================== Employee Hierarchy Tests ====================
 
   /** Test 1: Basic employee hierarchy traversal. Find all managers in the reporting chain. */
@@ -72,12 +83,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2))),
-        rows("Eliot", "Ron", 2, List.of(List.of("Ron", "Andrew", 3))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Dev", "Eliot", 1, List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))),
+        rows("Eliot", "Ron", 2, List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
-        rows("Asya", "Ron", 5, List.of(List.of("Ron", "Andrew", 3))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Asya", "Ron", 5, List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /** Test 2: Employee hierarchy traversal with depth field. */
@@ -102,12 +113,32 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2, 0))),
-        rows("Eliot", "Ron", 2, List.of(List.of("Ron", "Andrew", 3, 0))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4, 0))),
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(mapOf("name", "Eliot", "reportsTo", "Ron", "id", 2, "level", 0))),
+        rows(
+            "Eliot",
+            "Ron",
+            2,
+            List.of(mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "level", 0))),
+        rows(
+            "Ron",
+            "Andrew",
+            3,
+            List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4, "level", 0))),
         rows("Andrew", null, 4, Collections.emptyList()),
-        rows("Asya", "Ron", 5, List.of(List.of("Ron", "Andrew", 3, 0))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4, 0))));
+        rows(
+            "Asya",
+            "Ron",
+            5,
+            List.of(mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "level", 0))),
+        rows(
+            "Dan",
+            "Andrew",
+            6,
+            List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4, "level", 0))));
   }
 
   /** Test 3: Employee hierarchy with maxDepth=1 (allows 2 levels of traversal). */
@@ -132,20 +163,30 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2), List.of("Ron", "Andrew", 3))),
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(
+                Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2),
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
         rows(
             "Eliot",
             "Ron",
             2,
-            List.of(List.of("Ron", "Andrew", 3), Arrays.asList("Andrew", null, 4))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+            List.of(
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
         rows(
             "Asya",
             "Ron",
             5,
-            List.of(List.of("Ron", "Andrew", 3), Arrays.asList("Andrew", null, 4))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+            List.of(
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /** Test 4: Query Dev's complete reporting chain: Dev->Eliot->Ron->Andrew */
@@ -168,7 +209,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportsTo", "string"),
         schema("id", "int"),
         schema("reportingHierarchy", "array"));
-    verifyDataRows(result, rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2))));
+    verifyDataRows(
+        result,
+        rows("Dev", "Eliot", 1, List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))));
   }
 
   // ==================== Airport Connections Tests ====================
@@ -194,11 +237,20 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("JFK", List.of("BOS", "ORD"), List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("BOS", List.of("JFK", "PWM"), List.of(List.of("BOS", List.of("JFK", "PWM")))),
-        rows("ORD", List.of("JFK"), List.of(List.of("ORD", List.of("JFK")))),
-        rows("PWM", List.of("BOS", "LHR"), List.of(List.of("PWM", List.of("BOS", "LHR")))),
-        rows("LHR", List.of("PWM"), List.of(List.of("LHR", List.of("PWM")))));
+        rows(
+            "JFK",
+            List.of("BOS", "ORD"),
+            List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows(
+            "BOS",
+            List.of("JFK", "PWM"),
+            List.of(Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))),
+        rows("ORD", List.of("JFK"), List.of(Map.of("airport", "ORD", "connects", List.of("JFK")))),
+        rows(
+            "PWM",
+            List.of("BOS", "LHR"),
+            List.of(Map.of("airport", "PWM", "connects", List.of("BOS", "LHR")))),
+        rows("LHR", List.of("PWM"), List.of(Map.of("airport", "LHR", "connects", List.of("PWM")))));
   }
 
   /** Test 6: Find airports reachable from JFK within maxDepth=1. */
@@ -227,7 +279,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         rows(
             "JFK",
             List.of("BOS", "ORD"),
-            List.of(List.of("JFK", List.of("BOS", "ORD")), List.of("BOS", List.of("JFK", "PWM")))));
+            List.of(
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   /** Test 7: Find airports with default depth(=0) and start value of list */
@@ -251,7 +305,11 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("JFK", List.of("BOS", "ORD"), List.of(List.of("BOS", List.of("JFK", "PWM"), 0))));
+        rows(
+            "JFK",
+            List.of("BOS", "ORD"),
+            List.of(
+                mapOf("airport", "BOS", "connects", List.of("JFK", "PWM"), "numConnections", 0))));
   }
 
   /**
@@ -277,9 +335,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("Eliot", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("Jeff", "BOS", List.of(List.of("BOS", List.of("JFK", "PWM")))));
+        rows("Dev", "JFK", List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows("Eliot", "JFK", List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows("Jeff", "BOS", List.of(Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   /**
@@ -305,7 +363,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("name", "string"),
         schema("nearestAirport", "string"),
         schema("reachableAirports", "array"));
-    verifyDataRows(result, rows("Dev", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD"), 0))));
+    verifyDataRows(
+        result,
+        rows(
+            "Dev",
+            "JFK",
+            List.of(mapOf("airport", "JFK", "connects", List.of("BOS", "ORD"), "hops", 0))));
   }
 
   /**
@@ -338,9 +401,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             "Jeff",
             "BOS",
             List.of(
-                List.of("BOS", List.of("JFK", "PWM")),
-                List.of("JFK", List.of("BOS", "ORD")),
-                List.of("PWM", List.of("BOS", "LHR")))));
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")),
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "PWM", "connects", List.of("BOS", "LHR")))));
   }
 
   // ==================== Bidirectional Traversal Tests ====================
@@ -372,9 +435,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             "Andrew",
             3,
             List.of(
-                List.of("Ron", "Andrew", 3),
-                Arrays.asList("Andrew", null, 4),
-                List.of("Dan", "Andrew", 6))));
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4),
+                Map.of("name", "Dan", "reportsTo", "Andrew", "id", 6))));
   }
 
   /**
@@ -404,7 +467,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         rows(
             "ORD",
             List.of("JFK"),
-            List.of(List.of("JFK", List.of("BOS", "ORD")), List.of("BOS", List.of("JFK", "PWM")))));
+            List.of(
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   // ==================== Filter Tests ====================
@@ -444,10 +509,10 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         result,
         rows("Dev", "Eliot", 1, Collections.emptyList()),
         rows("Eliot", "Ron", 2, Collections.emptyList()),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
         rows("Asya", "Ron", 5, Collections.emptyList()),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /**
@@ -507,7 +572,13 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     // -> then Ron.reportsTo=Andrew -> Andrew(id=4) is filtered out -> stops
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2), List.of("Ron", "Andrew", 3))));
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(
+                Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2),
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))));
   }
 
   // ==================== Edge Cases ====================
@@ -600,12 +671,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifySchema(result, schema("name", "string"), schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", List.of(List.of("Eliot", "Ron", 2))),
-        rows("Eliot", List.of(List.of("Ron", "Andrew", 3))),
-        rows("Ron", List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Dev", List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))),
+        rows("Eliot", List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Ron", List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", Collections.emptyList()),
-        rows("Asya", List.of(List.of("Ron", "Andrew", 3))),
-        rows("Dan", List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Asya", List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Dan", List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   // ==================== Batch Mode Tests ====================
@@ -637,8 +708,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "Eliot", 1), List.of("Asya", "Ron", 5)),
-            List.of(List.of("Ron", "Andrew", 3, 0), Arrays.asList("Andrew", null, 4, 1))));
+            List.of(
+                Map.of("name", "Dev", "reportsTo", "Eliot", "id", 1),
+                Map.of("name", "Asya", "reportsTo", "Ron", "id", 5)),
+            List.of(
+                mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "depth", 0),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4, "depth", 1))));
   }
 
   /**
@@ -669,11 +744,14 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "JFK"), List.of("Eliot", "JFK"), List.of("Jeff", "BOS")),
             List.of(
-                List.of("JFK", List.of("BOS", "ORD"), 0),
-                List.of("BOS", List.of("JFK", "PWM"), 0),
-                List.of("PWM", List.of("BOS", "LHR"), 1))));
+                Map.of("name", "Dev", "nearestAirport", "JFK"),
+                Map.of("name", "Eliot", "nearestAirport", "JFK"),
+                Map.of("name", "Jeff", "nearestAirport", "BOS")),
+            List.of(
+                mapOf("airport", "JFK", "connects", List.of("BOS", "ORD"), "depth", 0),
+                mapOf("airport", "BOS", "connects", List.of("JFK", "PWM"), "depth", 0),
+                mapOf("airport", "PWM", "connects", List.of("BOS", "LHR"), "depth", 1))));
   }
 
   /**
@@ -702,12 +780,14 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "Eliot", 1), List.of("Dan", "Andrew", 6)),
             List.of(
-                List.of("Dev", "Eliot", 1, 0),
-                List.of("Eliot", "Ron", 2, 0),
-                Arrays.asList("Andrew", null, 4, 0),
-                List.of("Dan", "Andrew", 6, 0),
-                List.of("Asya", "Ron", 5, 1))));
+                Map.of("name", "Dev", "reportsTo", "Eliot", "id", 1),
+                Map.of("name", "Dan", "reportsTo", "Andrew", "id", 6)),
+            List.of(
+                mapOf("name", "Dev", "reportsTo", "Eliot", "id", 1, "depth", 0),
+                mapOf("name", "Eliot", "reportsTo", "Ron", "id", 2, "depth", 0),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4, "depth", 0),
+                mapOf("name", "Dan", "reportsTo", "Andrew", "id", 6, "depth", 0),
+                mapOf("name", "Asya", "reportsTo", "Ron", "id", 5, "depth", 1))));
   }
 }
